fixing the paddings and the spacing

--- a/style.scss
+++ b/style.scss
@@ -25,23 +25,24 @@ body {
 }
 
 section {
-  padding: 2.1rem;
+  padding: 3rem;
 }
 
 // content styles
 main {
   background: white;
-  max-width: 700px;
-  width: 700px;
+  max-width: 800px;
+  width: 800px;
   margin: auto;
   overflow: hidden;
   border-radius: 10px;
-  box-shadow: 0px 5px 10px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 10px 35px 17px rgba(0, 0, 0, 0.12);
 
   .top {
     h1 {
       color: $cyan;
-      font-size: 2.5rem;
+      font-size: 2rem;
+      margin-top: 0;
     }
 
     p {
@@ -69,12 +70,14 @@ main {
         display: flex;
         align-items: center;
         color: rgba(194, 246, 255, 0.753);
+        font-size: 1.2rem;
 
         .big {
           color: white;
-          font-size: 3rem;
-          margin-right: 0.5rem;
+          font-size: 2.7rem;
+          margin-right: 0.8rem;
           align-self: flex-start;
+          font-weight: 700;
         }
       }
 
@@ -91,7 +94,7 @@ main {
         color: white;
         margin-top: 1rem;
         cursor: pointer;
-        box-shadow: 0px 2px 10px 8px rgba(0, 0, 0, 0.1);
+        box-shadow: 0px 2px 41px 8px rgba(0, 0, 0, 0.1);
       }
     }
 
@@ -104,6 +107,7 @@ main {
         padding: 0;
         opacity: 0.7;
         font-size: 1.19rem;
+        margin-top: 1.8rem;
 
         li {
           line-height: 1.5;
